--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".OptionScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,9 +22,9 @@
         <activity android:name=".Contactus" />
         <activity android:name=".Registration" />
         <activity android:name=".ForgotPassword" />
-        <activity android:name=".OptionScreen" />
-        <activity android:name=".Resource" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Resource" />
+        <activity android:name=".Login" />
         <activity android:name=".Home" />
         <activity android:name=".Blog" />
         <activity android:name=".Research" />
@@ -66,7 +66,10 @@
         <activity android:name=".AboutReflexology13" />
         <activity android:name=".AboutReflexology14" />
         <activity android:name=".AboutReflexology15" />
-        <activity android:name=".AboutReflexology16"></activity>
+        <activity android:name=".AboutReflexology16" />
+        <activity android:name=".Main1" />
+        <activity android:name=".Main2" />
+        <activity android:name=".Main3"></activity>
     </application>
 
 </manifest>
