--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OptionScreen">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,7 +69,8 @@
         <activity android:name=".AboutReflexology16" />
         <activity android:name=".Main1" />
         <activity android:name=".Main2" />
-        <activity android:name=".Main3"></activity>
+        <activity android:name=".Main3" />
+        <activity android:name=".OptionScreen"></activity>
     </application>
 
 </manifest>
