--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MyApplication"
@@ -27,7 +27,6 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Resource" />
         <activity android:name=".Login" />
-        <activity android:name=".Home" />
         <activity android:name=".Blog" />
         <activity android:name=".Research" />
         <activity android:name=".ResearchOption" />
@@ -72,7 +71,8 @@
         <activity android:name=".Main1" />
         <activity android:name=".Main2" />
         <activity android:name=".Main3" />
-        <activity android:name=".OptionScreen"></activity>
+        <activity android:name=".OptionScreen" />
+        <activity android:name=".Home"></activity>
     </application>
 
 </manifest>
