--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Contactus"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".Registration"
-            android:windowSoftInputMode="stateHidden"/>
-        <activity android:name=".ForgotPassword"
-            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".Contactus"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".Registration"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ForgotPassword"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Resource" />
-        <activity android:name=".Login"
-            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".Login"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".Blog" />
         <activity android:name=".Research" />
         <activity android:name=".ResearchOption" />
@@ -76,7 +80,8 @@
         <activity android:name=".Main2" />
         <activity android:name=".Main3" />
         <activity android:name=".OptionScreen" />
-        <activity android:name=".Home"></activity>
+        <activity android:name=".Home" />
+        <activity android:name=".Network"></activity>
     </application>
 
 </manifest>
